# unitree-g1-robot

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  README.md  brainlift.txt  frames_2025-12-04_22.55.04.gv  test_replay_results.xml
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: ci.yml
config/: cyclonedds-robot.xml  cyclonedds.xml  cyclonedds_wifi.xml  frontier_alignment_research.yaml  greeter.yaml  mid360_config.json  robot.env
data/personnel/: gauntlet_personnel.json
docker/: Dockerfile  Dockerfile.greeter  compose.greeter.yaml  compose.yaml
docs/: agentic-misalignment-demo-architecture.md  agentic-misalignment-demo-brief.md  agentic-misalignment-demo-scenario.md  agentic-misalignment-tech-spec.md  architecture.md  bmm-workflow-status.yaml  epics-barry-demo.md  epics.md  implementation-readiness-report-2025-12-04.md  implementation-readiness-report-2025-12-06.md  jetson-setup.md  jetson-specs.md  prd.md  validation-report-2025-12-18.md
docs/analysis/: product-brief-unitree-g1-robot-2025-12-03.md
docs/research/: implementation-starting-points-2025-12-03.md
docs/sprint-artifacts/: 1-1-configuration-infrastructure.md  1-1-project-setup-docker-environment.md  1-1-project-setup-ros2-workspace.md  1-2-navigation-simulation-navsim.md  1-2-robot-actions-behaviors.md  1-2-simulation-environment.md  1-2.5-hardware-connectivity-hello-world.md  1-2.6-sensor-hello-world.md  1-3-computer-vision-pipeline.md  1-3-navigation-stack-integration.md  1-3-slam-core.md  1-4-hardware-integration.md  1-4-llm-control-simulation-harness.md  1-5-integration-demo-runner.md  1-5-safety-system.md  1-6-dual-environment-deployment.md  1-6-state-machine-cli-plan-management.md  1-7-visual-capture.md  1-8-vlm-defect-detection.md  1-9-report-generation.md  2-1-frontier-model-misalignment-research-suite.md  2-1-teleop-sensor-recording.md  2-2-advanced-misalignment-detection-suite.md  2-2-replay-system.md  2-3-e2e-replay-test.md  3-1-slam-visualizer.md  D-1-multi-stream-synchronized-replay-viewer.md  D-2-3d-point-cloud-visualization.md  sprint-status.yaml  validation-report-1-1-2025-12-04.md  validation-report-1-1-configuration-infrastructure-2025-12-18.md  validation-report-1-2-2025-12-05.md  validation-report-1-2-robot-actions-behaviors-2025-12-18.md  validation-report-1-3-2025-12-04.md  validation-report-1-3-2025-12-05.md  validation-report-1-3-computer-vision-pipeline-2025-12-18.md  validation-report-1-4-2025-12-05-v2.md  validation-report-1-4-2025-12-05.md  validation-report-1-4-llm-control-simulation-harness-2025-12-18.md  validation-report-1-5-2025-12-05.md  (+14 more)
models/: deploy.prototxt
scripts/: build-opencv-jetson.sh  check_g1_network.sh  create_test_map.py  create_test_report_data.sh  dcv-virtual-session.service  deploy-to-robot.sh  depth-stream.service  download_models.sh  env-ros2-sim.sh  env.sh  gather_jetson_specs.sh  generate_maps.cpp  generate_maps.py  install-nice-dcv.sh  install-ros2-humble.sh  record-and-map.sh  robot-shell.sh  sensor_hello_world.py  setup-external.sh  setup-network.sh  setup-robot-wifi.sh  setup-robot.sh  setup-ros2-sim.sh  setup.sh  setup_unitree_rl.sh  start-robot-stream.sh  teleop_g1.sh  test_sensor_hello_world.py  verify-robot-setup.sh  webcam-stream.service  zenoh-bridge-setup.sh
scripts/reference/: hello_world_g1.py  joint_control.py  read_g1_sensors.py  sensor_hello_world.py
scripts/robot/: zenoh-bridge.service
sim/detection_sim/: DetectionSim.cpp  DetectionSim.h  main.cpp
sim/nav_sim/: NavSim.cpp  NavSim.h  SimLocomotion.cpp  SimLocomotion.h  SimSensorSource.cpp  SimSensorSource.h  main.cpp
sim/slam_sim/: SlamSim.cpp  SlamSim.h  main.cpp
simulation/: README.md  __init__.py  requirements.txt  run_misalignment_detection.py  run_simulation.py
simulation/analysis/: __init__.py  compare_models.py  compute_metrics.py  generate_report.py  misalignment_metrics.py  visualize_results.py
simulation/classifiers/: __init__.py  (+13 more)
src/: main.cpp
src/g1_interfaces/: CMakeLists.txt  package.xml
src/g1_interfaces/action/: ExecuteInspection.action
src/g1_interfaces/msg/: DefectReport.msg  InspectionStatus.msg  Notification.msg
src/g1_interfaces/srv/: GetStatus.srv  StartInspection.srv
src/g1_interfaces/test/: test_interfaces.py
src/g1_navigation/: package.xml  setup.cfg  setup.py
src/g1_navigation/g1_navigation/: __init__.py  coverage_tracker.py  hardware_bridge.py  loco_bridge.py  sim_locomotion.py
src/g1_navigation/resource/: g1_navigation
src/g1_navigation/test/: test_navigation.py
src/g1_perception/: package.xml  setup.cfg  setup.py
src/g1_perception/g1_perception/: __init__.py  depth_to_pointcloud.py  lidar_to_scan.py  sim_camera.py  sim_imu.py  sim_lidar.py
src/g1_perception/resource/: g1_perception
src/g1_perception/test/: test_perception.py
src/g1_safety/: package.xml  setup.cfg  setup.py
src/g1_safety/g1_safety/: __init__.py
src/g1_safety/resource/: g1_safety
src/g1_safety/test/: test_safety.py
test/: MockVlmClient.h  test_action_executor.cpp  test_action_parser.cpp  test_capture.cpp  test_context_builder.cpp  test_detection.cpp  test_e2e_story_1_6.sh  test_e2e_story_1_7.sh  test_e2e_story_1_8.sh  test_e2e_story_1_9.sh  test_e2e_story_2_1.sh  test_e2e_story_2_2.sh  test_face_detector.cpp  test_face_recognizer.cpp  test_greeter_config.cpp  test_greeter_config_paths.cpp  test_greeter_runner.cpp  test_greeter_vlm_client.cpp  test_hardware.cpp  test_navigation.cpp  test_personnel_database.cpp  test_plan_manager.cpp  test_recording.cpp  test_replay.cpp  test_report.cpp  test_safety.cpp  test_scenario_script.cpp  test_session_recorder.cpp  test_slam.cpp  test_slam_visualizer.cpp  test_state_machine.cpp  test_stream_replay_viewer.cpp  test_teleop.cpp
tools/: dds_hello_pub.cpp  dds_hello_sub.cpp  depth_capture.cpp  depth_stream_server.cpp  generate_pointcloud.cpp  stream_viewer.cpp  test_dds_video.cpp  test_depth_client.cpp  test_greeter_actions.cpp  test_realsense.cpp  test_udp_recv.cpp  webcam_capture.cpp  webcam_stream_server.cpp
(+175 files in other folders)
